--- a/www.nass.gov.ng/813788039b9434a7c1d02b1f849b53b34f976048.yml
+++ b/www.nass.gov.ng/813788039b9434a7c1d02b1f849b53b34f976048.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:16:09 GMT
+    - Sun, 12 Aug 2018 12:13:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6GmYPZ0MwrzTH0%2C4m2jfM0; path=/
+    - PHPSESSID=ZuiLVv%2CUxiOt%2CCx%2C83RQa2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:16:09 GMT
+recorded_at: Sun, 12 Aug 2018 12:13:51 GMT
