--- a/www.nass.gov.ng/4b3b71ccadf1a0c0842e2cb4de38be09691d7a0c.yml
+++ b/www.nass.gov.ng/4b3b71ccadf1a0c0842e2cb4de38be09691d7a0c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:19:14 GMT
+    - Sun, 12 Aug 2018 12:17:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=asOfvYjmwAY7lZy2wZTS12; path=/
+    - PHPSESSID=ADWyML2A%2Cm76ghE19iYwT3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:19:14 GMT
+recorded_at: Sun, 12 Aug 2018 12:17:15 GMT
