--- a/www.nass.gov.ng/25aad21c7d6d360d3ffbcb5e8acd369e18a158de.yml
+++ b/www.nass.gov.ng/25aad21c7d6d360d3ffbcb5e8acd369e18a158de.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:30:23 GMT
+    - Sun, 12 Aug 2018 12:27:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N%2C6%2CUNWrKJnQ8WO0NnjEv1; path=/
+    - PHPSESSID=UL8AtfmxFMoU5FAC3sguD3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:30:23 GMT
+recorded_at: Sun, 12 Aug 2018 12:27:33 GMT
