--- a/www.nass.gov.ng/075b6c17ef1b9a6ad23bf829abfc4ac75f18b7e3.yml
+++ b/www.nass.gov.ng/075b6c17ef1b9a6ad23bf829abfc4ac75f18b7e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:32:23 GMT
+    - Sun, 12 Aug 2018 12:29:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O0rvBZj%2C7D4p962%2Cm0p7U2; path=/
+    - PHPSESSID=5syCXp17eJNqK7gRRb7oi0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:32:23 GMT
+recorded_at: Sun, 12 Aug 2018 12:29:03 GMT
