--- a/www.nass.gov.ng/1879706454c48de1447567fc6de3e1663608790b.yml
+++ b/www.nass.gov.ng/1879706454c48de1447567fc6de3e1663608790b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:38:49 GMT
+    - Sun, 12 Aug 2018 12:36:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v2IKlvarpQiwx5FBoLCsZ1; path=/
+    - PHPSESSID=xDUzXfNz7%2CjcIfW0TlYB-2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:38:50 GMT
+recorded_at: Sun, 12 Aug 2018 12:36:43 GMT
