--- a/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
+++ b/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 16:45:54 GMT
+    - Sun, 12 Aug 2018 12:42:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9BsYIaZcXc--mgCT4nSSL3; path=/
+    - PHPSESSID=f7CRGbAAOagU-iz%2C71cV30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 16:45:54 GMT
+recorded_at: Sun, 12 Aug 2018 12:42:57 GMT
