--- a/www.nass.gov.ng/eb6edc7a55456d79d4786d404e33acf3964f17c4.yml
+++ b/www.nass.gov.ng/eb6edc7a55456d79d4786d404e33acf3964f17c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 17:04:22 GMT
+    - Sun, 12 Aug 2018 12:57:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KZd1tppGv3OMF%2Cr4tLJND1; path=/
+    - PHPSESSID=pGMeCABUntTYK1WH9GZS-1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 17:04:22 GMT
+recorded_at: Sun, 12 Aug 2018 12:57:22 GMT
