--- a/www.nass.gov.ng/74fac3b9f6d4235a200c39295213a1050f6e2374.yml
+++ b/www.nass.gov.ng/74fac3b9f6d4235a200c39295213a1050f6e2374.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 17:05:19 GMT
+    - Sun, 12 Aug 2018 12:58:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E85X9MctcGbfJ3hTJ1GL03; path=/
+    - PHPSESSID=4JWHP5kTX%2C8Rt8tESXEMm0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 17:05:19 GMT
+recorded_at: Sun, 12 Aug 2018 12:58:08 GMT
