--- a/www.nass.gov.ng/2a0a98fab92c291f3ecaa0d6108a053f584ce2e4.yml
+++ b/www.nass.gov.ng/2a0a98fab92c291f3ecaa0d6108a053f584ce2e4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 17:06:11 GMT
+    - Sun, 12 Aug 2018 12:59:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Yep%2CeBKNY%2CLzbgEYCMm%2C%2C3; path=/
+    - PHPSESSID=7bUU20IvnIcIc%2CFmj5L8p1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 17:06:11 GMT
+recorded_at: Sun, 12 Aug 2018 12:59:57 GMT
