--- a/www.nass.gov.ng/714920e9668bf8d2c49ef91a5e1e418f2af50d06.yml
+++ b/www.nass.gov.ng/714920e9668bf8d2c49ef91a5e1e418f2af50d06.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:00:17 GMT
+    - Mon, 13 Aug 2018 18:16:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=a6WlZXY%2CTSmNqPgbIE-DY1; path=/
+    - PHPSESSID=6bZq6l6piHFLcAwnGMBbD3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:00:17 GMT
+recorded_at: Mon, 13 Aug 2018 18:16:17 GMT
