--- a/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
+++ b/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:06:22 GMT
+    - Mon, 13 Aug 2018 18:21:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oaw2%2Cut9AeCnG7JtAaz1j1; path=/
+    - PHPSESSID=8rnrtiHafyrkpOpLvDFyc0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:06:22 GMT
+recorded_at: Mon, 13 Aug 2018 18:21:17 GMT
