--- a/www.nass.gov.ng/7d408db573c69a4c0d061362a6925b676c42c68b.yml
+++ b/www.nass.gov.ng/7d408db573c69a4c0d061362a6925b676c42c68b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:11:02 GMT
+    - Mon, 13 Aug 2018 18:26:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XBIKhqoeoENkrr%2CGSuJHD0; path=/
+    - PHPSESSID=9kLeuqo%2CswZoYS5jnicMU3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:11:02 GMT
+recorded_at: Mon, 13 Aug 2018 18:26:49 GMT
