--- a/www.nass.gov.ng/8e161d4834b25566ac65880c7e9dff2d6ac72cec.yml
+++ b/www.nass.gov.ng/8e161d4834b25566ac65880c7e9dff2d6ac72cec.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:24:33 GMT
+    - Mon, 13 Aug 2018 18:38:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q-rVYA%2C0Pkykfyiub14zw2; path=/
+    - PHPSESSID=mNKKp8pTrlptCKxVS0lt40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:24:34 GMT
+recorded_at: Mon, 13 Aug 2018 18:38:35 GMT
