--- a/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
+++ b/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:31:59 GMT
+    - Mon, 13 Aug 2018 18:47:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sfEuVD4rZSXr4V2l50qYU0; path=/
+    - PHPSESSID=GJitKkoEfI%2Cuf9Z5LGA4n1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:31:59 GMT
+recorded_at: Mon, 13 Aug 2018 18:47:27 GMT
