--- a/www.nass.gov.ng/9c0ad57dcca91a74038e8d38dc17745b4a48a28b.yml
+++ b/www.nass.gov.ng/9c0ad57dcca91a74038e8d38dc17745b4a48a28b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:32:49 GMT
+    - Mon, 13 Aug 2018 18:48:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mggLtLAnYv33WHkOaHW-J3; path=/
+    - PHPSESSID=1EfpfTMOIV-Ud-ZU%2CeJD91; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:32:50 GMT
+recorded_at: Mon, 13 Aug 2018 18:48:30 GMT
