--- a/www.nass.gov.ng/d106538c570402d0a1a1f8ec9f991443901f061c.yml
+++ b/www.nass.gov.ng/d106538c570402d0a1a1f8ec9f991443901f061c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 05:55:39 GMT
+    - Mon, 13 Aug 2018 19:08:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hzLd%2Ch7oixqQIol7uModq1; path=/
+    - PHPSESSID=S5dfZcRFiW1hvIhyCDrt32; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 05:55:39 GMT
+recorded_at: Mon, 13 Aug 2018 19:08:36 GMT
