--- a/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
+++ b/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 06:03:59 GMT
+    - Mon, 13 Aug 2018 19:18:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ayPztnBVBfqVP%2CVdu3IQs1; path=/
+    - PHPSESSID=L5mC0p23-Rysp01ii%2C9jR1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 06:03:59 GMT
+recorded_at: Mon, 13 Aug 2018 19:18:34 GMT
