--- a/www.nass.gov.ng/4e0f750aaeb8fdf413650065cf6cc6a5f8312d5c.yml
+++ b/www.nass.gov.ng/4e0f750aaeb8fdf413650065cf6cc6a5f8312d5c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 06:29:36 GMT
+    - Mon, 13 Aug 2018 19:45:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W1jdIs%2CvyDWEYMto%2CdX5u0; path=/
+    - PHPSESSID=UfhZeR9FZhyAseye9bXe62; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 06:29:36 GMT
+recorded_at: Mon, 13 Aug 2018 19:45:33 GMT
