--- a/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
+++ b/www.nass.gov.ng/f681dbd6c1e834b6ae370b2fe9aecfedc795aae3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 06:41:37 GMT
+    - Mon, 13 Aug 2018 19:56:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bq2fl10GBBsIiebWzqE8l2; path=/
+    - PHPSESSID=Zdsx9d7gaENmG%2C3Hgtwe40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 06:41:37 GMT
+recorded_at: Mon, 13 Aug 2018 19:56:56 GMT
