--- a/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
+++ b/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:07:13 GMT
+    - Mon, 13 Aug 2018 20:23:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x4RWWOPjW90eJ2eCXlg4p3; path=/
+    - PHPSESSID=tueYqvJYb%2CTYwOOZYcDHZ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:07:13 GMT
+recorded_at: Mon, 13 Aug 2018 20:23:25 GMT
