--- a/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
+++ b/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:11:30 GMT
+    - Mon, 13 Aug 2018 20:28:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T%2CgdB9zlMKx6e1-Qfzze93; path=/
+    - PHPSESSID=e7ZKoPI78mOTwly0Ynp7E0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:11:31 GMT
+recorded_at: Mon, 13 Aug 2018 20:28:48 GMT
