--- a/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
+++ b/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:21:50 GMT
+    - Mon, 13 Aug 2018 20:39:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SMyVd2SFeMDTbOttYWSKK3; path=/
+    - PHPSESSID=vIN1WfmGzl9oK%2CIEVgy8e2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:21:50 GMT
+recorded_at: Mon, 13 Aug 2018 20:39:14 GMT
