--- a/www.nass.gov.ng/a4843a484a01f72a40805da9a90fbf96379ce4d6.yml
+++ b/www.nass.gov.ng/a4843a484a01f72a40805da9a90fbf96379ce4d6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:22:37 GMT
+    - Mon, 13 Aug 2018 20:40:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cDY1YbsuqlYaNDp5Bdtc-1; path=/
+    - PHPSESSID=0oakHP-jXMPbHci%2CFqw0I2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:22:37 GMT
+recorded_at: Mon, 13 Aug 2018 20:40:46 GMT
